@@ -1,3 +1,9 @@
+2008-07-26  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/plot3d.c (grid_nongrid_data): Honor the axis range limits when
+	drawing dgrid3d surfaces.
+	Bug #1363641
+
 2008-07-25  Ethan Merritt  <merritt@u.washington.edu>
 
 	* src/datafile.c (plot_ticlabel_using): If tic labels will be generated
